Code cleanup - Updated Gradle version